--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -34,9 +34,7 @@
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Author </h5> 
                     </div>
                     <div class="items-center  sm:flex">
-                        <a href="#">
-                            <img class="w-full p-6 rounded-lg sm:rounded-none sm:rounded-l-lg" src="{{author.avatar.url}}" alt="{{author.first_name}} Avatar">
-                        </a>
+                            <img class="w-28 h-28 mx-10 rounded-full sm:rounded-none sm:rounded-l-lg" src="{{author.avatar.url}}" alt="{{author.first_name}} Avatar">
                         <div class="p-5">
                             <h3 class="text-xl font-bold tracking-tight text-gray-900 ">
                                 {{author.first_name}} {{author.last_name}}
