--- a/src/dashboard/templates/grid_zoom_in.html
+++ b/src/dashboard/templates/grid_zoom_in.html
@@ -94,45 +94,49 @@
             </div>
         {% elif card.cardtype == 'legend_1' %}
             <div class="hexagon flex items-center" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_1}}; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
-                <img style="filter: invert(100%)  brightness(119%) contrast(119%);" src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_1}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{workshop.legend_label_1}}<br>
+                <img class="w-10 h-10 m-2 rounded-full" src="{{card.author.avatar.url}}" alt="Rounded avatar">
+                {{ card.author.first_name}}  {{ card.author.last_name}}<br><br>
                 <b>{{ card.title|truncatechars:20}}</b>
-                <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar.url}}">
-                <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
+                <br><br>
+                <img style="filter: invert(100%)  brightness(119%) contrast(119%);" src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_1}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+
+                 {{workshop.legend_label_1}}
             </div>
         {% elif card.cardtype == 'legend_2' %}
             <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_2}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_2}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{workshop.legend_label_2}}<br>
+                <img class="w-10 h-10 m-2 rounded-full" src="{{card.author.avatar.url}}" alt="Rounded avatar">
+                {{ card.author.first_name}}  {{ card.author.last_name}}<br><br>
                 <b>{{ card.title|truncatechars:20}}</b>
-                <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar.url}}">
-                <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
+                <br><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_2}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                {{workshop.legend_label_2}}
             </div>
         {% elif card.cardtype == 'legend_3' %}
             <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_3}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_3}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{workshop.legend_label_3}}<br>
+                <img class="w-10 h-10 m-2 rounded-full" src="{{card.author.avatar.url}}" alt="Rounded avatar">
+                {{ card.author.first_name}}  {{ card.author.last_name}}<br><br>
                 <b>{{ card.title|truncatechars:20}}</b>
-                <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar.url}}">
-                <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
+                <br><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_3}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                {{workshop.legend_label_3}}
             </div>
         {% elif card.cardtype == 'legend_4' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_4}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_4}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{workshop.legend_label_4}}<br>
+                <img class="w-10 h-10 m-2 rounded-full" src="{{card.author.avatar.url}}" alt="Rounded avatar">
+                {{ card.author.first_name}}  {{ card.author.last_name}}<br><br>
                 <b>{{ card.title|truncatechars:20}}</b>
-                <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar.url}}">
-                <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
+                <br><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_4}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                {{workshop.legend_label_4}}
             </div>
             {% elif card.cardtype == 'legend_5' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_5}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_5}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{workshop.legend_label_5}}<br>
+                <img class="w-10 h-10 m-2 rounded-full" src="{{card.author.avatar.url}}" alt="Rounded avatar">
+                {{ card.author.first_name}}  {{ card.author.last_name}}<br><br>
                 <b>{{ card.title|truncatechars:20}}</b>
-                <div class="flex">
-                <img class="w-10 h-10 rounded-full avatar" style="position: center;" src="{{card.author.avatar.url}}">
-                <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
-                </div>
+                <br><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_5}}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                {{workshop.legend_label_5}}
             </div>
             {% elif card.cardtype == 'image_card' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image.url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>
