--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -244,7 +244,7 @@
                             <a href="https://github.com/two-trick-pony-NL/mapmaker" class="hover:underline">Source Code</a>
                         </li>
 						<li class="mb-4">
-                            <a href="https://two-trick-pony-nl.github.io/upptime/history/mapmaker" class="hover:underline">Status page</a>
+                            <a href="https://upptime.petervandoorn.com/history/mapmaker" class="hover:underline">Status</a>
                         </li>
                     </ul>
                 </div>
