--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -18,7 +18,7 @@
       </div>
   </div>
 </section>
-<!--The wave-->
+<!--The wave
 <div class="relative -mt-12 lg:-mt-24" style="background-color: #fae050;">
   <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -38,6 +38,7 @@
     </g>
   </svg>
 </div>
+-->
 <!--Content-->
 
 
