--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -197,8 +197,7 @@
 
 	{% if not user.is_authenticated %}
 	{% if not workshop_secret %}
-	<!-- Change the colour #f8fafc to match the previous section colour -->
-	<div style="background-color: #51C1FF;">
+	<!-- The wave 	<div style="background-color: #51C1FF;">
 		<svg class="wave-top" viewBox="0 0 1439 147" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			<g transform="translate(-1.000000, -14.000000)" fill-rule="nonzero">
@@ -220,8 +219,9 @@
 			</g>
 		</g>
 		</svg>
-	</div>
-	<footer style="background-color: #51C1FF;" class="p-4 bg-white sm:p-6 flex-grow">
+	</div>-->
+
+	<footer style="background-color: #fae050;" class="p-4 bg-white sm:p-6 flex-grow">
     <div class="mx-auto max-w-screen-xl">
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0">
