--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -7,7 +7,7 @@
 <section style="background-color: #fae050;">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 grid lg:grid-cols-2 gap-8 lg:gap-16">
       <div class="flex flex-col justify-center">
-        <h1 class="mb-4 text-4xl tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">See the</h1>
+        <h1 class="mb-4 text-4xl tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Youtube See the</h1>
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">big picture</h1>
 
         <p class="mb-8 text-lg font-normal text-gray-900 lg:text-xl ">Mapmaker aligns your team while working on a complex problem.</p>
