--- a/src/card_interactions/templates/edit_title.html
+++ b/src/card_interactions/templates/edit_title.html
@@ -5,11 +5,22 @@
     {% if type == 'legend_1' %}
     <div style="background: #{{workshop.legend_hex_color_1}}; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
-        <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_1}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+        <img style="filter: invert(100%)  brightness(119%) contrast(119%); height: 100px; width: 100px;" src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_1}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-white ">{{workshop.legend_label_1}}</h5>
+        <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <div class="text-black">
         {{ form }}
+        <div class="text-black">
+        <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+        <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+            <option value="1">{{workshop.legend_label_1}}</option>
+            <option value="2">{{workshop.legend_label_2}}</option>
+            <option value="3">{{workshop.legend_label_3}}</option>
+            <option value="4">{{workshop.legend_label_4}}</option>,
+            <option value="5">{{workshop.legend_label_5}}</option>
+            <option value="6">Use Image</option>
+        </select>
+        </form>
         </div>
         <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
     </div>
@@ -17,10 +28,22 @@
 {% elif type == 'legend_2' %}
         <div style="background: #{{workshop.legend_hex_color_2}};"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_2}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_2}}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_2}}</h5>
-                {% csrf_token %}
-                {{ form }}
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form }}
+                    <div class="text-black">
+                    <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+                    <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+                        <option value="1">{{workshop.legend_label_1}}</option>
+                        <option value="2">{{workshop.legend_label_2}}</option>
+                        <option value="3">{{workshop.legend_label_3}}</option>
+                        <option value="4">{{workshop.legend_label_4}}</option>,
+                        <option value="5">{{workshop.legend_label_5}}</option>
+                        <option value="6">Use Image</option>
+                    </select>
+                    </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
             </div>
             </div>
@@ -28,20 +51,44 @@
 {% elif type == 'legend_3' %}
         <div style="background: #{{workshop.legend_hex_color_3}};"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_3}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_3}}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_3}}</h5>
-                {% csrf_token %}
-                {{ form }}
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form }}
+                    <div class="text-black">
+                    <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+                    <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+                        <option value="1">{{workshop.legend_label_1}}</option>
+                        <option value="2">{{workshop.legend_label_2}}</option>
+                        <option value="3">{{workshop.legend_label_3}}</option>
+                        <option value="4">{{workshop.legend_label_4}}</option>,
+                        <option value="5">{{workshop.legend_label_5}}</option>
+                        <option value="6">Use Image</option>
+                    </select>
+                    </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
             </div>
             </div>
 {% elif type == 'legend_4' %}
         <div style="background: #{{workshop.legend_hex_color_4}}; " class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_4}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_4}}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_4}}</h5>
-                {% csrf_token %}
-                {{ form }}
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form }}
+                    <div class="text-black">
+                    <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+                    <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+                        <option value="1">{{workshop.legend_label_1}}</option>
+                        <option value="2">{{workshop.legend_label_2}}</option>
+                        <option value="3">{{workshop.legend_label_3}}</option>
+                        <option value="4">{{workshop.legend_label_4}}</option>,
+                        <option value="5">{{workshop.legend_label_5}}</option>
+                        <option value="6">Use Image</option>
+                    </select>
+                    </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
 
             </div>
@@ -49,10 +96,22 @@
 {% elif type == 'legend_5' %}
         <div style="background: #{{workshop.legend_hex_color_5}};" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_5}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_5}}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_5}}</h5>
-                {% csrf_token %}
-                {{ form }}
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form }}
+                    <div class="text-black">
+                    <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+                    <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+                        <option value="1">{{workshop.legend_label_1}}</option>
+                        <option value="2">{{workshop.legend_label_2}}</option>
+                        <option value="3">{{workshop.legend_label_3}}</option>
+                        <option value="4">{{workshop.legend_label_4}}</option>,
+                        <option value="5">{{workshop.legend_label_5}}</option>
+                        <option value="6">Use Image</option>
+                    </select>
+                    </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
             </div>
             </div>
@@ -62,10 +121,19 @@
         <i class="fa-solid fa-circle-down fa-2xl"></i><br>
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
         <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit New Post</button>
-        </form>
+            {% csrf_token %}
+            {{ form }}
+            <div class="text-black">
+            <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+            <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+                <option value="1">{{workshop.legend_label_1}}</option>
+                <option value="2">{{workshop.legend_label_2}}</option>
+                <option value="3">{{workshop.legend_label_3}}</option>
+                <option value="4">{{workshop.legend_label_4}}</option>,
+                <option value="5">{{workshop.legend_label_5}}</option>
+                <option value="6">Use Image</option>
+            </select>
+            </form>
     </div>
     </div>
 {% elif type == 'empty' %}
@@ -73,11 +141,23 @@
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa- fa-2xl"></i><br>
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">New Card</h5>
-                {% csrf_token %}
-                {{ form }}
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form }}
+                    <div class="text-black">
+                    <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
+                    <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+                        <option value="1">{{workshop.legend_label_1}}</option>
+                        <option value="2">{{workshop.legend_label_2}}</option>
+                        <option value="3">{{workshop.legend_label_3}}</option>
+                        <option value="4">{{workshop.legend_label_4}}</option>,
+                        <option value="5">{{workshop.legend_label_5}}</option>
+                        <option value="6">Use Image</option>
+                    </select>
+                </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
             </div>
             </div>
 {% endif %}
 
-  </form>
+</form>
